--- a/estilo/layout.css
+++ b/estilo/layout.css
@@ -108,8 +108,14 @@ body {
     flex:auto;
     margin-top:2em;
   }
-
-/*Especificidad: 001*/
+  /*Especificidad: 001*/
   label{
     padding:0.8em;
+  }
+
+  /*Especificidad: 001*/
+input{
+    margin-top: 1em;
+    margin-left: 0.7em;
+    margin-right: 0.7em;
   }
